--- a/InwardPolicy.Core.App/Views/Login/Login.cshtml
+++ b/InwardPolicy.Core.App/Views/Login/Login.cshtml
@@ -73,6 +73,15 @@
         <div class="line"></div>
         <div class="line"></div>
     </div>
+    <section class="container">
+        <h1>
+            <span class="title">This is</span>
+            <span class="title">a long</span>
+            <span class="title">long title</span>
+        </h1>
+
+
+    </section>
     @*<center><h1 id="Heading" class=" shadow  text-center mt-5 text-white">INWARD POLICY ENTRY SYSTEM</h1></center>*@
     <form id="form1" method="post" asp-action="CheckLogin">
         <div class="container d-flex justify-content-center">
