--- a/InwardPolicy.Core.App/Views/HomePage/HomePage.cshtml
+++ b/InwardPolicy.Core.App/Views/HomePage/HomePage.cshtml
@@ -21,8 +21,8 @@
 
     <link href="~/css/Login.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>-->
-<link href="~/css/HomePage.css" rel="stylesheet" />
-@*<script src="~/js/HomePage.js"></script>*@
+<link href="~/css/NotFound.css" rel="stylesheet" />
+<script src="~/js/NotFound.js"></script>
 </head>
 <body>
     <div class="global">
@@ -35,11 +35,13 @@
                 </ul>
             </nav>
             <div class="content">
-                <h1 class="glitch">
-                    <span aria-hidden="true">Hello</span>
-                    Hello
-                    <span aria-hidden="true">Hello</span>
-                </h1>
+                <center>
+                    <h1 class="glitch">
+                        <span aria-hidden="true">404<br />NOT FOUND</span>
+                        404<br />NOT FOUND
+                        <span aria-hidden="true">404<br />NOT FOUND</span>
+                    </h1>
+                </center>
             </div>
         </div>
     </div>
