--- a/InwardPolicy.Core.App/Views/Test/Test.cshtml
+++ b/InwardPolicy.Core.App/Views/Test/Test.cshtml
@@ -1,100 +1,53 @@
-﻿@model InwardPolicy.Models.UsermasterModel
-@{
+﻿@{
     Layout = null;
 }
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <!--<link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=16231&format=png&color=000000">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Your Page Title Here</title>
+    @*<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-YWhnteglfALqxzWJ/slI+oTNUyELGtQDfLIUxxlAhhjszgyMJGiA7VcXOGOhqKJXGTDWjQkA/+MApewBhAqhGL6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/tagmanager/3.0.2/tagmanager.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css" />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.0/nouislider.min.css" rel="stylesheet">*@
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">-->
-    @*<link href="~/css/Login.scss" rel="stylesheet">*@
-    <!--<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-
-    <link href="~/css/Login.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>-->
-    @*<link href="~/css/HomePage.css" rel="stylesheet" />*@
-    @*<script src="~/js/HomePage.js"></script>*@
-    @*<link rel="stylesheet" href="~/css/site.css" />*@
-<link href="~/css/Test.css" rel="stylesheet" />
-<script src="~/js/Test.js"></script>
+    <link href="~/css/Test.css" rel="stylesheet" />
+    <script src="~/js/Test.js"></script>
 </head>
 <body>
-        <nav class="navbar navbar-toggleable-md fixed-top navbar-transparent" color-on-scroll="500">
-            <div class="container">
-                <div class="navbar-translate">
-                    <button class="navbar-toggler navbar-toggler-right navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-bar"></span>
-                        <span class="navbar-toggler-bar"></span>
-                        <span class="navbar-toggler-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="https://www.example.com">LOGO</a>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarToggler">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/" target="_blank">
-                                <i class="fa fa-twitter"></i>
-                                <p class="hidden-lg-up">Twitter</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/" target="_blank">
-                                <i class="fa fa-facebook-square"></i>
-                                <p class="hidden-lg-up">Facebook</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/" target="_blank">
-                                <i class="fa fa-instagram"></i>
-                                <p class="hidden-lg-up">Instagram</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://www.github.com/" target="_blank">
-                                <i class="fa fa-github"></i>
-                                <p class="hidden-lg-up">GitHub</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="https://www.example.com" target="_blank" class="btn btn-danger btn-round">Login</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+
+    <div class="overlay-navigation">
+        <nav role="navigation">
+            <ul>
+                <li><a href="#" data-content="The beginning">Home</a></li>
+                <li><a href="#" data-content="Curious?">About</a></li>
+                <li><a href="#" data-content="I got game">Skills</a></li>
+                <li><a href="#" data-content="Only the finest">Works</a></li>
+                <li><a href="#" data-content="Don't hesitate">Contact</a></li>
+            </ul>
         </nav>
-        <div class="wrapper">
-            <div class="page-header section-dark" style="background-image: url('http://demos.creative-tim.com/paper-kit-2/assets/img/antoine-barres.jpg')">
-                <div class="filter"></div>
-                <div class="content-center">
-                    <div class="container">
-                        <div class="title-brand">
-                            <h1 class="presentation-title">SITE TITLE</h1>
-                            <div class="fog-low">
-                                <img src="http://demos.creative-tim.com/paper-kit-2/assets/img/fog-low.png" alt="">
-                            </div>
-                            <div class="fog-low right">
-                                <img src="http://demos.creative-tim.com/paper-kit-2/assets/img/fog-low.png" alt="">
-                            </div>
-                        </div>
+    </div>
 
-                        <h2 class="presentation-subtitle text-center">Headline</h2>
-                    </div>
-                </div>
-                <div class="moving-clouds" style="background-image: url('http://demos.creative-tim.com/paper-kit-2/assets/img/clouds.png'); ">
-
-                </div>
-            </div>
+    <section class="home">
+        <a href="https://codepen.io/fluxus/pen/gPWvZm" target="_blank">Click for a slightly nicer Velocity.js version</a>
+        <div class="open-overlay">
+            <span class="bar-top"></span>
+            <span class="bar-middle"></span>
+            <span class="bar-bottom"></span>
         </div>
-    </body>
+    </section>
+
+
+    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tagmanager/3.0.2/tagmanager.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.0/nouislider.min.js"></script>*@
+    @*<script src="js/Test.js"></script>*@
+</body>
 </html>
-
-
-
