--- a/InwardPolicy.Core.App/Views/NotFound/NotFound.cshtml
+++ b/InwardPolicy.Core.App/Views/NotFound/NotFound.cshtml
@@ -29,9 +29,8 @@
         <div class="global__inner show">
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a asp-action="Home" asp-controller="Home">Home</a></li>
+                    <li><a  asp-action="Login" asp-controller="Login">Login</a></li>
                 </ul>
             </nav>
             <div class="content">
